@@ -7,6 +7,7 @@
   * Added preliminary support for working with circular polarizations in the correlator (lsl.correlator.fx) and imaging (lsl.imaging.utils) modules
   * Added an option of imageIDI.py to overlay a topocentric graticle rather than a equatorial one
   * Added better support for non-linear polarizations to imageIDI.py
+  * Added support for retrieving the file start time in samples to the various lsl.reader.ldp.LDPFileBase sub-classes
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
@@ -23,6 +24,7 @@
   * Fixed a bug in the lsl.common.progress.ProgressBarPlus class that caused the time estimates not to get updated when using __iadd__
   * Fixed a bug in the splitSession.py script that caused it to die on truncated data files (Ticket #60)
   * Fixed a bug in imageIDI.py that assumed that 'xx' was always present in the data
+  * Fixed a bug in the lsl.reader.ldp.DRXFile class that caused the tuning frequencies to be reported wrong by getInfo()
 
 1.0.2
   * Added documentation for LDP to the Sphinx build system
